// Generated from cloud_dispatcher_service.ifex by covesa-ifex-core
// DO NOT EDIT - regenerate with: ./generate_proto.sh
syntax = "proto3";



package swdv.cloud_dispatcher_service;

// Namespace: dispatcher
// Cloud dispatcher operations for fleet RPC

// Status of an RPC request
enum cloud_rpc_status_t {
  RPC_UNKNOWN = 0;
  RPC_PENDING = 1;
  RPC_SUCCESS = 2;
  RPC_FAILED = 3;
  RPC_TIMEOUT = 4;
  RPC_VEHICLE_OFFLINE = 5;
  RPC_SERVICE_UNAVAILABLE = 6;
  RPC_METHOD_NOT_FOUND = 7;
  RPC_INVALID_PARAMETERS = 8;
  RPC_TRANSPORT_ERROR = 9;
  RPC_CANCELLED = 10;
}

// Request to call a method on a vehicle service
message call_method_request_t {
  string vehicle_id = 1;
  string service_name = 2;
  string method_name = 3;
  string parameters_json = 4;
  uint32 timeout_ms = 5;
  string requester_id = 6;
}

// Result of a synchronous method call
message call_method_response_t {
  string correlation_id = 1;
  cloud_rpc_status_t status = 2;
  string result_json = 3;
  string error_message = 4;
  uint32 duration_ms = 5;
  string service_endpoint = 6;
}

// Response to an async method call request
message call_method_async_response_t {
  string correlation_id = 1;
  bool accepted = 2;
  string error_message = 3;
}

// Status of an RPC request (for polling)
message rpc_status_t {
  string correlation_id = 1;
  string vehicle_id = 2;
  string service_name = 3;
  string method_name = 4;
  cloud_rpc_status_t status = 5;
  string result_json = 6;
  string error_message = 7;
  uint32 duration_ms = 8;
  bool completed = 9;
  uint64 created_at_ms = 10;
  uint64 responded_at_ms = 11;
  string requester_id = 12;
}

// Summary of an RPC request for listing
message rpc_request_summary_t {
  string correlation_id = 1;
  string vehicle_id = 2;
  string service_name = 3;
  string method_name = 4;
  cloud_rpc_status_t status = 5;
  bool completed = 6;
  uint64 created_at_ms = 7;
  uint64 responded_at_ms = 8;
  uint32 duration_ms = 9;
  string requester_id = 10;
}

// Filters for listing RPC requests
message list_rpc_requests_filter_t {
  string vehicle_id_filter = 1;
  string service_name_filter = 2;
  string requester_id_filter = 3;
  bool pending_only = 4;
  bool failed_only = 5;
  uint64 since_ms = 6;
  sint32 page_size = 7;
  string page_token = 8;
}

// List of RPC requests
message list_rpc_requests_response_t {
  repeated rpc_request_summary_t requests = 1;
  string next_page_token = 2;
  sint32 total_count = 3;
}

// Result of cancel operation
message cancel_rpc_response_t {
  bool success = 1;
  string error_message = 2;
}

// Request to call a method on multiple vehicles
message fleet_call_request_t {
  repeated string vehicle_ids = 1;
  string fleet_id = 2;
  string region = 3;
  string service_name = 4;
  string method_name = 5;
  string parameters_json = 6;
  uint32 timeout_ms = 7;
  string requester_id = 8;
  bool parallel = 9;
}

// Result of a fleet method call for one vehicle
message fleet_call_result_t {
  string vehicle_id = 1;
  string correlation_id = 2;
  cloud_rpc_status_t status = 3;
  string result_json = 4;
  string error_message = 5;
  uint32 duration_ms = 6;
}

// Aggregate result of a fleet method call
message fleet_call_response_t {
  sint32 total_vehicles = 1;
  sint32 successful = 2;
  sint32 failed = 3;
  sint32 pending = 4;
  repeated fleet_call_result_t results = 5;
}

// Method: call_method
// Synchronous RPC call to a vehicle service. Blocks until response or timeout.

message call_method_request {
  call_method_request_t request = 1;
}

message call_method_response {
  call_method_response_t result = 1;
}

service call_method_service {
  rpc call_method(call_method_request) returns (call_method_response);
}

// Method: call_method_async
// Asynchronous RPC call. Returns correlation_id for polling.

message call_method_async_request {
  call_method_request_t request = 1;
}

message call_method_async_response {
  call_method_async_response_t result = 1;
}

service call_method_async_service {
  rpc call_method_async(call_method_async_request) returns (call_method_async_response);
}

// Method: get_rpc_status
// Get status/result of an RPC request by correlation_id
message get_rpc_status_request {
  string correlation_id = 1;
}

message get_rpc_status_response {
  rpc_status_t status = 1;
}

service get_rpc_status_service {
  rpc get_rpc_status(get_rpc_status_request) returns (get_rpc_status_response);
}

// Method: list_rpc_requests
// List RPC requests with optional filtering
message list_rpc_requests_request {
  list_rpc_requests_filter_t filter = 1;
}

message list_rpc_requests_response {
  list_rpc_requests_response_t result = 1;
}

service list_rpc_requests_service {
  rpc list_rpc_requests(list_rpc_requests_request) returns (list_rpc_requests_response);
}

// Method: cancel_rpc
// Cancel a pending RPC request
message cancel_rpc_request {
  string correlation_id = 1;
}

message cancel_rpc_response {
  cancel_rpc_response_t result = 1;
}

service cancel_rpc_service {
  rpc cancel_rpc(cancel_rpc_request) returns (cancel_rpc_response);
}

// Method: call_fleet_method
// Invoke a method on multiple vehicles. Can target explicit vehicle list, fleet ID, or region.

message call_fleet_method_request {
  fleet_call_request_t request = 1;
}

message call_fleet_method_response {
  fleet_call_response_t result = 1;
}

service call_fleet_method_service {
  rpc call_fleet_method(call_fleet_method_request) returns (call_fleet_method_response);
}

// Method: healthy
// Check if dispatcher is ready to accept requests
message healthy_request {
}

message healthy_response {
  bool is_healthy = 1;
}

service healthy_service {
  rpc healthy(healthy_request) returns (healthy_response);
}


